--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy":
-      "npm run build && mv build/index.html build/200.html && surge build bitcoin-react.surge.sh"
+    "deploy": "npm run build && mv build/index.html build/200.html && surge build bitcoin-react.surge.sh"
   }
 }
