--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy":
-      "npm run build && mv build/index.html build/200.html && surge build bitcoin-react.surge.sh"
+      "yarn build && mv build/index.html build/200.html && surge build bitcoin-react.surge.sh"
   }
 }
