Extend Travis Build + Deploy Master (#9)

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 install:
 - yarn install
 - yarn build
+- mv server/ build/
 script:
 - yarn test
 cache:
@@ -13,9 +14,3 @@ after_success:
 addons:
   ssh_known_hosts:
   - 178.62.2.65
-before_install:
-- openssl aes-256-cbc -K $encrypted_779d064a95db_key -iv $encrypted_779d064a95db_iv
-  -in deploy-key.enc -out deploy-key -d
-- rm deploy-key.enc
-- chmod 600 deploy-key
-- mv deploy-key ~/.ssh/id_rsa
