--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ addons:
 before_install:
 - |
     if [ $TRAVIS_BRANCH = "master" ] && [ $TRAVIS_REPO_SLUG = "gustavogodoi/react-cryptomarket" ]
+    then
       openssl aes-256-cbc -K $encrypted_40d62000dcf5_key -iv $encrypted_40d62000dcf5_iv 
-      -in deploy-key.enc
-      -out deploy-key -d
+      -in deploy-key.enc -out deploy-key -d
       rm deploy-key.enc
       chmod 600 deploy-key
       mv deploy-key ~/.ssh/id_rsa
