--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
 addons:
   ssh_known_hosts:
   - 178.62.2.65
-script:
+before_install:
 - openssl aes-256-cbc -K $encrypted_40d62000dcf5_key -iv $encrypted_40d62000dcf5_iv
   -in deploy-key.enc -out deploy-key -d
 - rm deploy-key.enc
