--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=3001 nodemon ./bin/www",
+    "start": "nodemon ./bin/www",
     "production-start": "pm2 start app.js -i max",
     "production-restart": "pm2 restart all"
   },
