--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "npm-run-all --parallel start:** -- --watch ",
+    "start:client": "node scripts/start.js",
+    "start:server": "cd ./server && yarn start",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
@@ -98,6 +100,7 @@
     "*.{js,json,css}": ["prettier --write", "git add"]
   },
   "devDependencies": {
-    "lint-staged": "^6.0.1"
+    "lint-staged": "^6.0.1",
+    "npm-run-all": "^4.1.2"
   }
 }
