--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-history-api-fallback": "^2.2.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.14.11",
